# jedeschule-scraper

./: pyproject.toml
jedeschule_lite/: __init__.py  runner.py  schema.py  utils.py
jedeschule_lite/scrapers/: api.py  csv_scrapers.py  geojson.py  html.py  wfs_xml.py
