[project]
name = "jedeschule-scraper"
version = "0.1.0"
description = "Web scrapers for the jedeschule.codefor.de project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "geoalchemy2==0.18.1",
    "openpyxl>=3.1.5",
    "psycopg2==2.9.11",
    "pyproj==3.7.2",
    "requests==2.32.5",
    "scrapy==2.14.1",
    "sqlalchemy==2.0.46",
    "xmltodict==1.0.4",
]

[project.optional-dependencies]
# Lightweight variant without Scrapy — works in Fabric Spark notebooks
lite = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "xmltodict>=1.0",
    "pyproj>=3.6",
]
